# neolight

./: .gitignore  README.md  Taskfile.yml  create_ahk.py  keycodes.txt  mappings.csv  neolight.ahk  template.ahk
linux/: evdev.patch  find-xkeyboard-config-dir.sh  install.sh  neolight  neolight_symbols  neolight_types  register-neolight.sh
linux/archlinux/: PKGBUILD  neolight  register-neolight.sh
windows/: create_ahk.py  keycodes.txt  mappings.csv  pyproject.toml  template.ahk
