[tool.poetry]
name = "neolight build script"
version = "0.1.0"
description = ""
authors = ["Michael Engelhard <engelhard.michael+git@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
